--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>Hello World</h1>
 <p>flksjdlksjfklsdjlncxvlsndasdf lksjdf lksjad fklajs flkajs dkljasfd l</p>
 </body>
 </html>
