--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p>flksjdlksjfklsdjlncxvlsndasdf lksjdf lksjad fklajs flkajs dkljasfd l</p>
+<img src="image.jpg"></img>
 </body>
 </html>
