--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>Hello World</h1>
 <img src="image.jpg"></img>
 <img src="image2.jpg"></img>
+<img src="image3.jpg"></img>
 
 sdfljoeiwjalksfxnsgfdndfsdsflslfjsdlkjl
 sdflasjdf
