--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h1>Hello World</h1>
 <img src="image.jpg"></img>
-<img src="image2.jpg"></img>
+<img src="image2.png"></img>
 
 sdfljoeiwjalksfxnsgfdndfsdsflslfjsdlkjl
 sdflasjdf
